@@ -40,12 +40,12 @@
 		<!-- Class and instance vars -->
 		<MARK_FOLLOWING TYPE="KEYWORD4">@</MARK_FOLLOWING>
 
-
 		<!-- Method, class and modules names -->
-		<MARK_FOLLOWING TYPE="FUNCTION" MATCH_TYPE="KEYWORD1">def</MARK_FOLLOWING>
-		<MARK_FOLLOWING TYPE="FUNCTION" MATCH_TYPE="KEYWORD1">undef</MARK_FOLLOWING>
-		<MARK_FOLLOWING TYPE="FUNCTION" MATCH_TYPE="KEYWORD1">class</MARK_FOLLOWING>
-		<MARK_FOLLOWING TYPE="FUNCTION" MATCH_TYPE="KEYWORD1">module</MARK_FOLLOWING>
+		<MARK_FOLLOWING TYPE="FUNCTION" MATCH_TYPE="KEYWORD1">\bdef\b</MARK_FOLLOWING>
+		<MARK_FOLLOWING TYPE="FUNCTION" MATCH_TYPE="KEYWORD1">\bundef\b</MARK_FOLLOWING>
+		<MARK_FOLLOWING TYPE="FUNCTION" MATCH_TYPE="KEYWORD1">\bclass\b</MARK_FOLLOWING>
+		<MARK_FOLLOWING TYPE="FUNCTION" MATCH_TYPE="KEYWORD1">\bmodule\b</MARK_FOLLOWING>
+
 		<!-- String literals -->
 		<SPAN TYPE="LITERAL1" DELEGATE="doubleQuoteLiteral">
 			<BEGIN>"</BEGIN>
